--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.4"
   }
