--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/express": "^4.17.13",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.4"
   }
