--- a/package.json
+++ b/package.json
@@ -15,22 +15,23 @@
    "author": "",
    "license": "ISC",
    "devDependencies": {
+      "@types/node": "^16.11.10",
       "chai": "^4.3.6",
       "mocha": "^10.0.0",
       "sequelize-cli": "^6.4.1",
       "sinon": "^14.0.0",
       "ts-node": "10.7.0",
-      "typescript": "4.5.2",
-      "@types/node": "^16.11.10"
+      "typescript": "4.5.2"
    },
    "dependencies": {
       "@types/express": "^4.17.13",
       "dotenv": "^16.0.1",
       "express": "^4.18.1",
       "mysql2": "^2.3.3",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
       "ts-node-dev": "^2.0.0",
       "typeorm": "0.3.7",
-      "reflect-metadata": "^0.1.13",
-      "pg": "^8.4.0"
+      "zod": "^3.18.0"
    }
 }
