--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
    "author": "",
    "license": "ISC",
    "devDependencies": {
+      "@types/bcrypt": "^5.0.0",
       "@types/node": "^16.11.10",
       "chai": "^4.3.6",
       "mocha": "^10.0.0",
@@ -25,6 +26,7 @@
    },
    "dependencies": {
       "@types/express": "^4.17.13",
+      "bcrypt": "^5.0.1",
       "dotenv": "^16.0.1",
       "express": "^4.18.1",
       "mysql2": "^2.3.3",
