--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
    },
    "dependencies": {
       "@types/express": "^4.17.13",
+      "@types/jsonwebtoken": "^8.5.9",
       "bcrypt": "^5.0.1",
       "dotenv": "^16.0.1",
       "express": "^4.18.1",
