feat: add get boards by user id feature

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_USER=root
-DB_PASS=1234
-DB_NAME=KANBAN
-DB_HOST=localhost
-DB_PORT=3306
+DB_USER=postgres
+DB_PASS=132465rjsm01232100
+DB_NAME=postgres
+DB_HOST=db.qixwlbmokxwlowjbwurt.supabase.co
+DB_PORT=5432
 JWT_SECRET=segredosecreto
